cilium-networkpolicies/monitoring-system-networkpolicies/grafana-egress-world.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-world
  namespace: monitoring-system
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: monitoring-system
      app: grafana
  egress:
    - toFQDNs:
        - matchName: api.telegram.org
        - matchName: snapshots.raintank.io
        - matchName: grafana.com
      toPorts:
        - ports:
            - port: "443"
