cilium-networkpolicies/monitoring-system-networkpolicies/grafana-image-snapshots.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: grafana-image-snapshots
  namespace: monitoring-system
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: monitoring-system
      app.kubernetes.io/name: grafana
  egress:
    - toFQDNs:
        - matchName: snapshots.raintank.io
      toPorts:
        - ports:
            - port: "443"
