cilium-networkpolicies/monitoring-system-networkpolicies/grafana-telegram-notifs.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: grafana-telegram-notifs
  namespace: monitoring-system
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: monitoring-system
      app.kubernetes.io/name: grafana
  egress:
    - toFQDNs:
        - matchName: api.telegram.org
      toPorts:
        - ports:
            - port: "443"
