cilium-networkpolicies/monitoring-system-networkpolicies/namespace-isolation-monitoring-node-exporter.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: namespace-isolation-monitoring-node-exporter
  namespace: monitoring-node-exporter
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
  # - toEntities:
  #   - host  # Allow to host (includes API server)
  #   toPorts:
  #   - ports:
  #     - port: "6443"
  #       protocol: TCP
