cilium-networkpolicies/monitoring-system-networkpolicies/ui-ingress-prometheus.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: ui-ingress-prometheus
  namespace: monitoring-system
spec:
  endpointSelector:
    matchLabels: 
      app.kubernetes.io/name: prometheus
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
        app.kubernetes.io/name: traefik
    toPorts:
    - ports:
      - port: "9090"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels: {}
